Play with time intervals
This patch adds necessary code to define time intervals and check
whether two intervals overlap or not. In addition, it uses QuickCheck
to verify that the overlap function is both reflexive and
symmetric. Additional tests have to be written, but these two
properties have helped to find several missing cases in the
implementation.

--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,7 @@ resolver: lts-9.0
 packages:
 - ./ogma-api
 - ./ogma
-extra-deps: []
+extra-deps:
+- generic-arbitrary-0.1.0
 flags: {}
 extra-package-dbs: []
