--- a/ogma-api/ogma-api.cabal
+++ b/ogma-api/ogma-api.cabal
@@ -32,8 +32,11 @@ test-suite ogma-api-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       EventSpec
   build-depends:       base
                      , ogma-api
+                     , QuickCheck
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
