--- a/ogma-api/ogma-api.cabal
+++ b/ogma-api/ogma-api.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Web.Ogma.Api
   build-depends:       base >= 4.7 && < 5
                      , servant >= 0.11 && < 0.12
+                     , megaparsec >= 6.1 && < 6.2
   default-language:    Haskell2010
 
 executable og2purs
