--- a/ogma-api/ogma-api.cabal
+++ b/ogma-api/ogma-api.cabal
@@ -19,6 +19,8 @@ library
   build-depends:       base >= 4.7 && < 5
                      , servant >= 0.11 && < 0.12
                      , megaparsec >= 6.1 && < 6.2
+                     , aeson >= 1.1 && < 1.2
+                     , text >= 1.2 && < 1.3
   default-language:    Haskell2010
 
 executable og2purs
@@ -38,6 +40,7 @@ test-suite ogma-api-test
                      , ogma-api
                      , QuickCheck
                      , hspec
+                     , aeson
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
