--- a/ogma-api/ogma-api.cabal
+++ b/ogma-api/ogma-api.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Web.Ogma.Api
+  exposed-modules:     Web.Ogma.Data
   build-depends:       base >= 4.7 && < 5
                      , servant >= 0.11 && < 0.12
                      , megaparsec >= 6.1 && < 6.2
