--- a/ogma.cabal
+++ b/ogma.cabal
@@ -1,8 +1,8 @@
-name:                ogma-api
+name:                ogma
 version:             0.0.0.0
-synopsis:            Specifications of the API exposed by an Ogma server
+-- synopsis:
 -- description:
-homepage:            https://github.com/ogma-project/ogma-api#readme
+homepage:            https://github.com/ogma-project/ogma#readme
 license:             AGPL-3
 license-file:        LICENSE
 author:              Thomas Letan
@@ -12,6 +12,14 @@ category:            Web
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
+
+flag purs
+  description:       "A tool to generate purescript scripts from the API specifications"
+  default:           False
+
+flag server
+  description:       "The Ogma server"
+  default:           False
 
 library
   hs-source-dirs:      src
@@ -25,27 +33,43 @@ library
                      , http-api-data >= 0.3 && < 0.4
   default-language:    Haskell2010
 
+executable ogmad
+  hs-source-dirs:      app/ogmad
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
+  if flag(server)
+    build-depends:     base
+                     , ogma
+    buildable:         True
+  else
+    buildable:         False
+
 executable og2purs
   hs-source-dirs:      app/og2purs
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , ogma-api
   default-language:    Haskell2010
+  if flag(purs)
+    build-depends:     base
+                     , ogma
+    buildable:         True
+  else
+    buildable:         False
 
-test-suite ogma-api-test
+test-suite ogma-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       EventSpec
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
   build-depends:       base
-                     , ogma-api
+                     , ogma
                      , QuickCheck
                      , hspec
                      , aeson
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/ogma-project/ogma-api
+  location: https://github.com/ogma-project/ogma
