--- a/ogma.cabal
+++ b/ogma.cabal
@@ -62,7 +62,7 @@ test-suite ogma-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       EventSpec
+  other-modules:       DataSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   build-depends:       base
@@ -70,6 +70,7 @@ test-suite ogma-test
                      , QuickCheck
                      , hspec
                      , aeson
+                     , text
 
 source-repository head
   type:     git
