--- a/ogma.cabal
+++ b/ogma.cabal
@@ -25,12 +25,14 @@ library
   hs-source-dirs:      src
   exposed-modules:     Web.Ogma.Data
                      , Web.Ogma.Api
+                     , Web.Ogma.Resource
   build-depends:       base >= 4.7 && < 5
                      , servant >= 0.11 && < 0.12
                      , megaparsec >= 6.1 && < 6.2
                      , aeson >= 1.1 && < 1.2
                      , text >= 1.2 && < 1.3
                      , http-api-data >= 0.3 && < 0.4
+                     , mtl >= 2.2.1 && < 2.3
   default-language:    Haskell2010
 
 executable ogmad
