--- a/ogma.cabal
+++ b/ogma.cabal
@@ -65,11 +65,13 @@ test-suite ogma-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       DataSpec
+                     , GraphSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   build-depends:       base
                      , ogma
                      , QuickCheck
+                     , mtl
                      , hspec
                      , aeson
                      , text
