--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
     # try to build
   - stack build
     # test and report test coverage
-  - stack exec hpc-coveralls
+  - stack exec hpc-coveralls ogma-test
     # check whether stylish-haskell has been applied
   - find . -name '*.hs' -exec stack exec stylish-haskell -- -i {} \;
   - git status
@@ -26,4 +26,6 @@ script:
     # hlint should return nothing for app dir
   - stack exec hlint -- lint app
     # hlint should return nothing for test dir
+  - stack exec hlint -- lint test
+    # documentation needs to build
   - stack haddock
