--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ script:
 
 after_script:
   - mkdir -p dist/hpc/tix/
-  - cp $(find .stack-work/install -name ogma-test.tix -exec dirname {} \;) dist/hpc/tix/
+  - cp -r $(find .stack-work/install -name ogma-test.tix -exec dirname {} \;) dist/hpc/tix/
   - stack exec hpc-coveralls ogma-test
