--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 
 script:
     # try to build
-  - stack build
+  - stack build --coverage
     # test
   - stack test --coverage
     # check whether stylish-haskell has been applied
