--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: false
+language: haskell
 
 cache:
   directories:
@@ -14,7 +15,7 @@ before_install:
 
 install:
   - stack setup
-  - stack install stylish-haskell hlint hpc-coveralls
+  - stack install stylish-haskell hlint
 
 script:
     # try to build
@@ -33,10 +34,9 @@ script:
   - stack exec hlint -- lint test
     # documentation needs to build
   - stack haddock
+    # and with cabal!
+  - cabal configure --enable-tests --enable-library-coverage && cabal build && cabal test
 
 after_script:
-  - mkdir -p dist/hpc/tix/
-  - mkdir -p dist/hpc/mix/
-  - cp -r $(find .stack-work/install -name ogma-test.tix -exec dirname {} \;) dist/hpc/tix/
-  - cp -rv $(find .stack-work/install -name lib)/*/* dist/hpc/mix
-  - stack exec hpc-coveralls -- ogma-test --display-report
+  - cabal install hpc-coveralls
+  - hpc-coveralls ogma-test
