--- a/ogma.cabal
+++ b/ogma.cabal
@@ -30,9 +30,9 @@ library
                      , servant >= 0.11 && < 0.12
                      , megaparsec >= 6.0 && < 6.2
                      , aeson >= 1.0 && < 1.2
-                     , text >= 1.2 && < 1.3
+                     , text >= 1.0 && < 1.3
                      , http-api-data >= 0.3 && < 0.4
-                     , mtl >= 2.2.1 && < 2.3
+                     , mtl >= 2.0 && < 2.3
   default-language:    Haskell2010
 
 executable ogmad
@@ -70,11 +70,11 @@ test-suite ogma-test
   default-language:    Haskell2010
   build-depends:       base
                      , ogma
-                     , QuickCheck
-                     , mtl
-                     , hspec
-                     , aeson
-                     , text
+                     , QuickCheck -any
+                     , mtl -any
+                     , hspec -any
+                     , aeson -any
+                     , text -any
 
 source-repository head
   type:     git
