--- a/.travis.yml
+++ b/.travis.yml
@@ -94,7 +94,7 @@ script:
         stack --no-terminal $ARGS test --haddock --no-haddock-deps
         ;;
       cabal)
-        cabal configure --enable-tests --enable-benchmarks -v2 --ghc-options="-O0 -Werror"
+        cabal configure --enable-tests --enable-coverage --enable-benchmarks -v2 --ghc-options="-O0 -Werror"
         cabal build
         cabal check || [ "$CABALVER" == "1.16" ]
         cabal test
@@ -103,4 +103,6 @@ script:
         SRC_TGZ=$(cabal info . | awk '{print $2;exit}').tar.gz && \
           (cd dist && cabal install --force-reinstalls "$SRC_TGZ")
         ;;
+        cabal install hpc-coveralls
+        hpc-coveralls ogma-test
     esac
