--- a/.travis.yml
+++ b/.travis.yml
@@ -45,10 +45,6 @@ matrix:
       addons: {apt: {packages: [ghc-8.0.2], sources: [hvr-ghc]}}
 
   allow_failures:
-    - env: BUILD=stack STACK_YAML=stack-7.10.yaml
-      compiler: ": #stack 7.10.3 osx"
-      os: osx
-
     - env: BUILD=stack GHCVER=8.0.2 STACK_YAML=stack.yaml
       compiler: ": #stack 8.0.2 osx"
       os: osx
@@ -81,8 +77,7 @@ install:
         stack --no-terminal --install-ghc $ARGS test --only-dependencies
         ;;
       style)
-        stack --no-terminal --install-ghc $ARGS test --only-dependencies
-        stack install stylish-haskell hlint
+        stack --no-terminal --install-ghc $ARGS install stylish-haskell hlint
         ;;
       cabal)
         cabal --version
