--- a/ogma.cabal
+++ b/ogma.cabal
@@ -1,7 +1,7 @@
 name:                ogma
 version:             0.0.0.0
--- synopsis:
--- description:
+synopsis:            Ogma as a server
+description:         Ogma as a server
 homepage:            https://github.com/ogma-project/ogma#readme
 license:             AGPL-3
 license-file:        LICENSE
@@ -28,11 +28,11 @@ library
                      , Web.Ogma.Resource
   build-depends:       base >= 4.7 && < 5
                      , servant >= 0.11 && < 0.12
-                     , megaparsec >= 6.1 && < 6.2
-                     , aeson >= 1.1 && < 1.2
-                     , text >= 1.2 && < 1.3
+                     , megaparsec >= 6.0 && < 6.2
+                     , aeson >= 1.0 && < 1.2
+                     , text >= 1.0 && < 1.3
                      , http-api-data >= 0.3 && < 0.4
-                     , mtl >= 2.2.1 && < 2.3
+                     , mtl >= 2.0 && < 2.3
   default-language:    Haskell2010
 
 executable ogmad
@@ -70,11 +70,11 @@ test-suite ogma-test
   default-language:    Haskell2010
   build-depends:       base
                      , ogma
-                     , QuickCheck
-                     , mtl
-                     , hspec
-                     , aeson
-                     , text
+                     , QuickCheck -any
+                     , mtl -any
+                     , hspec -any
+                     , aeson -any
+                     , text -any
 
 source-repository head
   type:     git
