--- a/ogma.cabal
+++ b/ogma.cabal
@@ -66,6 +66,7 @@ test-suite ogma-test
   main-is:             Spec.hs
   other-modules:       DataSpec
                      , GraphSpec
+                     , Shared
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   build-depends:       base
@@ -75,6 +76,7 @@ test-suite ogma-test
                      , hspec -any
                      , aeson -any
                      , text -any
+                     , http-api-data -any
 
 source-repository head
   type:     git
