--- a/ogma.cabal
+++ b/ogma.cabal
@@ -26,6 +26,7 @@ library
   exposed-modules:     Web.Ogma.Data
                      , Web.Ogma.Api
                      , Web.Ogma.Resource
+                     , Web.Ogma.Graph
   build-depends:       base >= 4.7 && < 5
                      , servant >= 0.11 && < 0.12
                      , megaparsec >= 6.0 && < 6.2
